<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Activity.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#1F4562"
        android:gravity="center"
        android:text="@string/bazar_hisab_TV"
        android:textColor="@color/color_White"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="#1F4562"
        android:elevation="18dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F4562"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/item_TV"
                android:textColor="@color/color_White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/item_name_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="28dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/item_hint"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@color/color_White"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:background="#1F4562"
        android:elevation="18dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="#1F4562">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/poriman_TV"
                android:textColor="@color/color_White"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spinner_ID"
                app:layout_constraintHorizontal_bias="0.015"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.316" />

            <EditText
                android:id="@+id/poriman_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="26dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/quantity_hint"
                android:inputType="numberDecimal"
                android:textColor="@color/color_White"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/spinner_ID"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.619" />

            <Spinner
                android:id="@+id/spinner_ID"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1.2"
                android:ellipsize="marquee"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:elevation="18dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F4562"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/price_TV"
                android:textColor="@color/color_White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/price_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="28dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal"
                android:textColor="@color/color_White"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="23dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/color_White"
                android:textSize="25sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:background="#1F4562"
        android:elevation="18dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F4562"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="editButton"
                android:text="@string/edit_btn"
                android:textColor="#000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="save_all"
                android:text="@string/save_btn"
                android:textColor="#000"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="#1F4562"
        android:foregroundGravity="center"
        android:gravity="center_vertical|fill_vertical|center_horizontal|center"
        android:onClick="see_All_List"
        android:text="@string/seeAllList_TV"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />


</androidx.constraintlayout.widget.ConstraintLayout>